<resources>
    <string name="app_name">GitHub Search</string>
    <string name="action_settings">Search parameters</string>
    <string name="main_activity_name">GitHub Search</string>
    <string name="repo_details_activity_name">Repo Details</string>

    <string name="enter_search_keywords">Enter search keywords</string>

    <string name="sort_by">Sort by:</string>
    <string name="stars_count">Stars count</string>
    <string name="forks_count">Forks count</string>
    <string name="updated_count">Updated count</string>

    <string name="order">Order:</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>

    <string name="search_in">Search in:</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="readme">README</string>

    <string name="Save">Save</string>

    <string name="image_description">Image</string>
    <string name="title_activity_rep_details">RepDetailsActivity</string>
    <string name="author_info_string">Author info:</string>
    <string name="created_at_string">Created at:</string>pushed_at_string
    <string name="updated_at_string">Updated at:</string>
    <string name="pushed_at_string">Pushed at:</string>language_string
    <string name="language_string">Language:</string>
</resources>
