<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_by" />

    <RadioGroup
        android:id="@+id/radioSortBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioStars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stars_count"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioForks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forks_count" />

        <RadioButton
            android:id="@+id/radioUpdated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updated_count" />

    </RadioGroup>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order" />

    <RadioGroup
        android:id="@+id/radioOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descending"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioAsc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ascending" />

    </RadioGroup>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_in" />

    <CheckBox
        android:id="@+id/checkboxName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"/>

    <CheckBox
        android:id="@+id/checkboxDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description" />

    <CheckBox
        android:id="@+id/checkboxReadme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/readme" />

    <Button
        android:id="@+id/dialogButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Save" />

</LinearLayout>